Fri Apr 30 15:26:12 1993  Gray Watson  (gray at toaster.antaire.com)

	* Moved around some defines and changes include ordering.

	* Added -v option to malloc_dbg to provide verbose output
	especially for dumping currently set debug tokens from
	MALLOC_DEBUG variable.

Mon Apr 19 16:04:17 1993  Gray Watson  (gray at toaster.antaire.com)

	* Released version 1.2.3.

	* Made some changes to a lot of comments, notes files, and ttd
	file.

Thu Apr 15 17:44:41 1993  Gray Watson  (gray at toaster.antaire.com)

	* Renamed malloc.h to malloc_dbg.h and libmalloc.a to
	libmalloc_dbg.a.  Added heap-extension checking and verification
	to make sure no-one extends the heap using sbrk behind out back.
	Fixed calloc to have the number of elements be a size_t to (WHY??
	It's not a size!!).  Fixed malloc_t free problems.

Wed Apr 14 18:11:00 1993  Gray Watson  (gray at toaster.antaire.com)

	* Released version 1.2.2.

	* Added some more point checking tests to malloc_str.  Added
	MALLOC_SIZE to some more places.  Completely ifdef'ed compat.h.
	If cannot open logfile, now it complains and continues.  Removed
	stdarg from malloc_dbg.

Fri Apr  9 01:50:17 1993  Gray Watson  (gray at toaster.antaire.com)

	* Released version 1.2.1.

	* Made various other changes.  Backed out some printf changes.
	Added SIZE_T defines and fixed up STDC defines.

Thu Apr  8 17:41:59 1993  Gray Watson  (gray at toaster.antaire.com)

	* Changed to void * internally from char * and put STDC defines in
	malloc.h for ANSI folks.  Why did the ANSI idiots drop the return
	value from free?  Dumb!

	* Made a number of changes per suggestions from the net.  Added
	some size_t defines for AIX junk (that's right scott junk).  Cut
	down on the continuation strings, fixed some README and mallocrc
	goofs, etc.  Thanks to all.

Tue Apr  6 00:46:45 1993  Gray Watson  (gray at toaster.antaire.com)

	* version 1.2.0 posted to comp.sources.unix.

	* Upgraded to version 1.2.0.  Ready for 2nd release to