@@ -1,5 +1,8 @@
 Fri Apr 30 15:26:12 1993  Gray Watson  (gray at toaster.antaire.com)
 
+	* Removed some heap checks in malloc.c per bali's comments and
+	fixed some of the error strings.
+
 	* Moved around some defines and changes include ordering.
 
 	* Added -v option to malloc_dbg to provide verbose output
